# v2v-protocol

./: .gitignore  CMakeLists.txt  LICENSE  Messages.cpp  Messages.hpp  Messages.odvd  README-suggestion.md  README.md  Receiver.cpp  Recieve.cpp  Send.cpp  Sender.cpp  V2V.hpp  V2VService.cpp  V2VService.hpp  messages.odvd
